syntax = "proto3";

package runify;

option go_package = "./pb";

message Empty {

}

message CardItem {
	uint64 cardID = 1;
	string name = 2;
	string icon = 3;
}

message SelectedCard {
	uint64 cardID = 1;
}

message ActionItem {
	uint32 actionID = 1;
	string name = 2;
}

message Actions {
	repeated ActionItem items = 1;
}

message SelectedAction {
	uint32 actionID = 1;
	uint64 cardID = 2;
}

message Form {
	string layout = 1;
	repeated CardItem cards = 2;
}

message HideWindow {
	string error = 1;
}

message Result {
	oneof payload {
		Form form = 1;
		Empty empty = 2;
		HideWindow hide = 3;
	}
}

// System messages

enum LogLevel {
	DEBUG = 0;
	INFO = 1;
	WARNING = 2;
	ERROR = 3;
}

message WriteLog {
	LogLevel level = 1;
	string message = 2;
}

enum FormStateType {
	SHOW = 0;
	HIDE = 1;
}

message SetFormState {
	FormStateType state = 1;
}

message ServiceMsgUI {
	oneof payload {
		WriteLog writeLog = 1;
	}
}

message ServiceMsgSrv {
	oneof payload {
		SetFormState setFormState = 1;
	}
}

// Form messages

message RootListRowGlobalID {
	uint32 providerID = 1;
	uint32 rowID = 2;
}

message RootListRow {
	uint32 providerID = 1;
	uint32 rowID = 2;
	uint32 priority = 3;
	string icon = 4;
	string value = 5;
}

message RootListRows {
	repeated RootListRow rows = 1;
}

message RootListRowsUpdate {
	repeated RootListRows create = 1;
	repeated RootListRows change = 2;
	repeated RootListRowGlobalID Remove = 3;
}

message RootListForm {
	RootListRows rows = 1;
}

message ContextMenuRowID {
	uint32 rowID = 1;
}

message ContextMenuRow {
	uint32 rowID = 1;
	string value = 2;
}

message ContextMenuRows {
	repeated ContextMenuRow rows = 1;
}

message ContextMenuForm {
	ContextMenuRows rows = 1;
}

message CloseForm {
}

message FilterData {
	string value = 1;
}

message FormDataMsgUI {
	uint32 formID = 1;
	oneof payload {
		FilterData filterChanged = 2;
		RootListRowGlobalID rootListRowActivated = 3;
		RootListRowGlobalID rootListMenuActivated = 4;
		ContextMenuRowID contextMenuRowActivated = 5;
	}
}

message FormDataMsgSrv {
	uint32 formID = 1;
	oneof payload {
		RootListForm openRootListForm = 2;
		RootListRowsUpdate updateRootListForm = 3;
		ContextMenuForm openContextMenuForm = 4;
		CloseForm closeForm = 5;
	}
}

service Runify {
	rpc ServiceChannel(stream ServiceMsgUI) returns (stream ServiceMsgSrv) {}
	rpc FormDataChannel(stream FormDataMsgUI) returns (stream FormDataMsgSrv) {}
	rpc GetRoot(Empty) returns (Form) {}
	rpc GetActions(SelectedCard) returns (Actions) {}
	rpc ExecuteDefault(SelectedCard) returns (Result) {}
	rpc Execute(SelectedAction) returns (Result) {}
}
